docs(Java): 添加类生命周期和类初始化相关内容
- 新增类生命周期各个阶段的说明和示例
- 添加触发和不触发类初始化的方式及其示例
- 补充类初始化的重要特性和面试题解析
- 更新相关图片和代码示例